# cmake_swiftpm_c_plus_plus

./: .gitignore  CMakeLists.txt  Makefile  Package.swift  README.md
Sources/CalculationCLI/: main.swift
Sources/CalculationCpp/include/CalculationCpp/: Calculation.h  CalculationCpp.h
Sources/CalculationCpp/src/: Calculation.cpp
Sources/CalculationPackage/: CalculationWrapper.swift
Sources/cmake_swiftpm_c_plus_plus/: MyClass.cpp  MyClass.h
SwiftUISample/SwiftUISample/: ContentView.swift  Item.swift  SwiftUISampleApp.swift
SwiftUISample/SwiftUISample.xcodeproj/: project.pbxproj
SwiftUISample/SwiftUISample.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Tests/cmake_swiftpm_c_plus_plusTests/: cmake_swiftpm_c_plus_plusTests.swift
